frugalityscore-webapp/style.css
body {
    margin: 0;
    font-family: Arial, sans-serif;
}

.container {
    display: flex;
    height: 100vh;
}

/* LEFT PANEL */
.left-panel {
    width: 25%;
    padding: 20px;
    background-color: #d3d3d3;
    border-right: 1px solid #ccc;
}

.left-panel h2 {
    margin-top: 0;
}

.control {
    margin-bottom: 25px;
    width: 100%;
}

label {
    display: block;
    margin-bottom: 5px;
}

/* RIGHT PANEL */
.right-panel {
    width: 75%;
    padding: 20px;
}

.output-plots {
    width: 50%;
}

.output-displays {
    width: 50%;
}

#plot {
    width: 100%;
    height: 25%;
}

#plot_membership {
    width: 100%;
    height: 25%;
}

#plot_membership_energy {
    width: 100%;
    height: 25%;
}

#plot_membership_score {
    width: 50%;
    height: 20%;
}

#plot_membership_score_agg {
    width: 50%;
    height: 20%;
}

#score_display {
    width: 30%;
    height: 20%;
}

#defuzz_display {
    width: 20%;
    height: 20%;
}

